# Kairos

./: .gitignore  .rocq_build.mk.d  ALIGNMENT_KAIROS_KERNEL_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_FROM_ROCQ_TO_IMPLEMENTATION.md  ARCHITECTURE_PIPELINE_LAYERS.md  ARCHITECTURE_REMAINING_OBC_DEPENDENCIES.md  AST_API.md  CLAUDE_HANDOFF_PROVE_MONITOR_REMOVAL.md  CONTRIBUTING.md  ETUDE_COMPARATIVE_2026-03-07_LTL_ANNOTATIONS_ET_KAIROS.md  Formal.md  INSTALL.md  KERNEL_GUIDED_REFACTOR_STATUS.md  Method.md  MyTodo.md  Notes.md  README.md  REPRISE_PREK_CALLS.md  TODO.md  Test.md  TestDelay.md  automaton.md  cahier_de_laboratoire.md  dune  dune-project  explain.md  kairos.opam  manual.md  moniteur.md  moniteurs.md  obc2why3.opam  objectif_methodologie.md  proof.tex  proof_detailed.tex  resume.md  rocq_build.mk  rocq_build.mk.conf  rocq_oracle_model.aux  rocq_oracle_model.fdb_latexmk  (+3 more)
lib/artifacts/: artifact_io.ml  artifact_io.mli  artifact_render_ir.ml  artifact_render_ir.mli  artifact_render_ir_dot.ml  artifact_render_ir_dot.mli  artifact_render_monitor.ml  ast_dump.ml  ast_dump.mli  dune  graphviz_render.ml  instrumentation_artifacts.ml  instrumentation_artifacts.mli  instrumentation_info_builder.ml  normalized_program_render.ml  normalized_program_render.mli  pipeline_build.ml  pipeline_build.mli  pipeline_instrumentation.ml  pipeline_instrumentation.mli  pipeline_outputs.ml  pipeline_outputs.mli
lib/lsp_protocol/: dune  kairos_lsp_extensions.md  lsp_app.ml  lsp_protocol.ml  lsp_protocol.mli  lsp_services.ml
lib/middleend/: dune
lib/pipeline/: dune  engine_service.ml  engine_service.mli  io.ml  io.mli  kairos_object.ml  kairos_object.mli  lsp_app.mli  modular_imports.ml  modular_imports.mli  obligation_taxonomy.ml  obligation_taxonomy.mli  pipeline.ml  pipeline.mli  pipeline_ast.ml  pipeline_ast.mli  pipeline_build.ml  pipeline_build.mli  pipeline_eval.ml  pipeline_eval.mli  pipeline_instrumentation.ml  pipeline_instrumentation.mli  pipeline_outputs.ml  pipeline_outputs.mli  pipeline_run.ml  pipeline_run.mli  pipeline_types.ml  pipeline_v2_indep.ml  pipeline_v2_indep.mli  pipeline_why.ml  pipeline_why.mli  runner.ml  runner.mli  v2_pipeline.ml
lib/why3/: dune  emit.ml  emit.mli  why_call_plan.ml  why_call_plan.mli  why_compile_expr.ml  why_contract_plan.ml  why_contract_plan.mli  why_contracts.ml  why_contracts.mli  why_core.ml  why_core.mli  why_env.ml  why_prove.mli  why_runtime_view.ml  why_runtime_view.mli
lib_v2/runtime/: dune
src/: ast.ml  automaton_core.ml  automaton_core.mli  cli.ml  collect.ml  collect.mli  compile_expr.ml  compile_expr.mli  dot.ml  dot.mli  dune  emit.ml  emit.mli  emit_why_contracts.ml  emit_why_types.mli  lexer.mll  main.ml  main.mli  monitor_emit.ml  monitor_transform.ml  monitor_transform.mli  parser.mly  passes.ml  passes.mli  pipeline.ml  pipeline.mli  specs.mli  stage_io.ml  stage_io.mli  stages.ml  stages.mli  support.ml  whygen.ml  whygen_automaton.ml  whygen_automaton_core.ml  whygen_collect.ml  whygen_compile_expr.ml  whygen_emit.ml  whygen_support.ml
src/ast/: ast.ml  ast_provenance.ml  ast_utils.ml  ast_utils.mli  collect.ml  collect.mli  dune  support.ml
src/automata/: automata_atoms.ml  automata_atoms.mli  automaton_core.ml  automaton_types.mli  automaton_util.mli  dune
src/automaton/: automaton_bdd.ml  automaton_bdd.mli  automaton_config.mli  automaton_core.mli  automaton_residual.ml  automaton_types.ml  automaton_util.mli
src/backend/: README.md  backend.ml  backend.mli  compile_expr.ml  dot.ml  emit.ml  emit.mli  emit_obc.ml  monitor_emit.ml
src/common/: ast.ml  ast.mli  ast_automaton.ml  ast_automaton.mli  ast_builder.ml  ast_builder.mli  ast_builders.mli  ast_contracts.ml  ast_contracts.mli  ast_diff.ml  ast_diff.mli  ast_invariants.ml  ast_invariants.mli  ast_iter.ml  ast_iter.mli  ast_map.ml  ast_map.mli  ast_monitor.ml  ast_monitor.mli  ast_obc.ml  ast_obc.mli  ast_provenance.mli  ast_serialize.ml  ast_serialize.mli  ast_user.ml  ast_user.mli  ast_utils.mli  ast_why.ml  ast_why.mli  collect.ml  collect.mli  log.mli  logger.ml  logger.mli  provenance.mli  stage_info.ml  stage_info.mli  stage_names.ml  stage_names.mli  stage_types.ml  (+5 more)
src/emit_why/: emit_why_contracts.ml  emit_why_core.mli  emit_why_diagnostics.ml  emit_why_diagnostics.mli  emit_why_env.ml  emit_why_env.mli  emit_why_types.ml
src/frontend/: README.md  frontend.ml  frontend.mli
src/instrumentation/: abstract_model.ml  contract_coherency.ml  contracts_pass.ml  dot_emit.ml  dot_emit.mli  dune  frontend.mli  history_elimination.ml  instrumentation.ml  ir_production.mli  kairos_ir.ml  kairos_ir.mli  kernel_guided_contract.mli  parse_file.mli  product_debug.ml  product_kernel_ir.ml  product_kernel_ir.mli  product_types.ml  product_types.mli  stage_info.ml  stage_info.mli
src/logic/: automaton_valuation.ml  automaton_valuation.mli  dune  fo_atoms.ml  fo_atoms.mli  fo_simplifier.ml  fo_simplifier.mli  fo_specs.ml  fo_specs.mli  fo_time.mli  ltl_valuation.ml  ltl_valuation.mli  specs.ml
src/middle-end/: README.md  automaton_default.ml  automaton_pass.ml  contracts_pass.ml  middle_end.ml  middle_end.mli  monitor_pass.ml
src/monitor/: dot.mli  monitor_emit.ml  monitor_transform.ml  monitor_transform.mli
src/obc/: dune
src/parse/: ast_dump.ml  dune  lexer.ml
src/pipeline/: backend.ml  backend.mli  dune  engine_service.ml  io.mli  kairos_object.ml  lsp_app.ml  lsp_app.mli  modular_imports.mli  pipeline.ml  pipeline.mli  pipeline_v2_indep.ml  v2_pipeline.mli
src/stages/: stage_types.ml  stage_types.mli
src/tools/: dune  gen_pipeline_dot.ml  ide_highlight.ml  ide_text_utils.ml  obcwhy3_ide.ml
src/utils/: dune  log.ml
src/why3/: emit.ml  emit.mli  why_compile_expr.mli  why_diagnostics.mli  why_env.ml  why_labels.mli  why_runtime_view.ml  why_stage.ml
tests/: README.md  delay_int2.obc  dune
tests/delay/: delay_int.obc  delay_int2.obc
tests/edge/: edge_rise.obc
tests/fail/: README.md  dune  example.t
tests/history/: and2_history.obc
tests/ko/: README.md  all_ko.t  armed_delay__bad_code.kairos  armed_delay__bad_invariant.kairos  dune  (+76 more)
(+3906 files in other folders)
