(library
 (name obcwhy3_lib)
 (wrapped false)
 (modules
  ast
  ast_user
  ast_automaton
  ast_contracts
  ast_monitor
  ast_obc
  ast_why
  ast_dump
  frontend
  lexer
  parser
  parse_file
  support
  provenance
  collect
  stage_types
  stage_names
  stages_info
  log
  stage_io
  pipeline
  cli
  contract_link
  middle_end_stages
  middle_end
  stages
  why_compile_expr
  obc_stage
  obc_emit
  obc_ghost_instrument
  why_types
  why_labels
  why_prove
  why_env
  why_contracts
  why_diagnostics
  why_core
  why_emit
  emit
  backend
  monitor_generation_atoms
  monitor_generation_spec
  monitor_generation
  monitor_instrument
  dot_emit
  why_stage
  fo_specs
  fo_time
  automaton_util
  automaton_config
  fo_atoms
  ltl_valuation
  automaton_bdd
  ltl_norm
  ltl_progress
  automaton_types
  automaton_residual
  automaton_core)
 (libraries str re why3 cmdliner logs logs.fmt bos fpath sedlex fmt rresult)
 (preprocess (pps ppx_deriving.show sedlex.ppx)))

(executable
 (name main)
 (public_name obc2why3)
 (modules main)
 (libraries obcwhy3_lib))

(include_subdirs unqualified)
