(rule
 (alias runtest)
 (targets toggle_toggle.why)
 (deps toggle/toggle.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle.why
    (run %{bin:obc2why3} toggle/toggle.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle.why))))

(rule
 (alias runtest)
 (targets toggle_toggle2.why)
 (deps toggle/toggle2.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle2.why
    (run %{bin:obc2why3} toggle/toggle2.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle2.why))))

(rule
 (alias runtest)
 (targets toggle_toggle3.why)
 (deps toggle/toggle3.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle3.why
    (run %{bin:obc2why3} toggle/toggle3.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle3.why))))

(rule
 (alias runtest)
 (targets delay_delay_int.why)
 (deps delay/delay_int.obc)
 (action
  (progn
   (with-stdout-to delay_delay_int.why
    (run %{bin:obc2why3} delay/delay_int.obc))
   (run %{bin:why3} prove -P z3 -t 30 delay_delay_int.why))))
