(rule
 (alias runtest)
 (targets toggle_toggle.why)
 (deps toggle/toggle.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle.why
    (run %{bin:obc2why3} toggle/toggle.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle.why))))

(rule
 (alias runtest)
 (targets toggle_toggle2.why)
 (deps toggle/toggle2.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle2.why
    (run %{bin:obc2why3} toggle/toggle2.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle2.why))))

(rule
 (alias runtest)
 (targets toggle_toggle3.why)
 (deps toggle/toggle3.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle3.why
    (run %{bin:obc2why3} toggle/toggle3.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle3.why))))

(rule
 (alias runtest)
 (targets delay_delay_int.why)
 (deps delay/delay_int.obc)
 (action
  (progn
   (with-stdout-to delay_delay_int.why
    (run %{bin:obc2why3} delay/delay_int.obc))
   (run %{bin:why3} prove -P z3 -t 30 delay_delay_int.why))))

(rule
 (alias runtest)
 (targets delay_delay_int2.why)
 (deps delay/delay_int2.obc)
 (action
  (progn
   (with-stdout-to delay_delay_int2.why
    (run %{bin:obc2why3} delay/delay_int2.obc))
   (run %{bin:why3} prove -P z3 -t 30 delay_delay_int2.why))))

(rule
 (alias runtest)
 (targets toggle_toggle01.why)
 (deps toggle/toggle01.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle01.why
    (run %{bin:obc2why3} toggle/toggle01.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle01.why))))

(rule
 (alias runtest)
 (target golden_delay_int.gen.why)
 (deps delay/delay_int.obc)
 (action
  (with-stdout-to %{target}
   (run %{bin:obc2why3} delay/delay_int.obc))))

(rule
 (alias runtest)
 (deps golden/delay_int.why golden_delay_int.gen.why)
 (action
  (diff golden/delay_int.why golden_delay_int.gen.why)))

(rule
 (alias runtest)
 (target golden_toggle.gen.why)
 (deps toggle/toggle.obc)
 (action
  (with-stdout-to %{target}
   (run %{bin:obc2why3} toggle/toggle.obc))))

(rule
 (alias runtest)
 (deps golden/toggle.why golden_toggle.gen.why)
 (action
  (diff golden/toggle.why golden_toggle.gen.why)))
