(rule
 (alias runtest)
 (targets toggle_toggle.why)
 (deps toggle/toggle.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle.why
    (run %{bin:obc2why3} toggle/toggle.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle.why))))

(rule
 (alias runtest)
 (targets delay_delay_int.why)
 (deps delay/delay_int.obc)
 (action
  (progn
   (with-stdout-to delay_delay_int.why
    (run %{bin:obc2why3} delay/delay_int.obc))
   (run %{bin:why3} prove -P z3 -t 30 delay_delay_int.why))))

(rule
 (alias runtest)
 (targets delay_delay_int2.why)
 (deps delay/delay_int2.obc)
 (action
  (progn
   (with-stdout-to delay_delay_int2.why
    (run %{bin:obc2why3} delay/delay_int2.obc))
   (run %{bin:why3} prove -P z3 -t 30 delay_delay_int2.why))))

(rule
 (alias runtest)
 (targets toggle_toggle_if.why)
 (deps toggle/toggle_if.obc)
 (action
  (progn
   (with-stdout-to toggle_toggle_if.why
    (run %{bin:obc2why3} toggle/toggle_if.obc))
   (run %{bin:why3} prove -P z3 -t 30 toggle_toggle_if.why))))

(rule
 (alias runtest)
 (targets edge_edge_rise.why)
 (deps edge/edge_rise.obc)
 (action
  (progn
   (with-stdout-to edge_edge_rise.why
    (run %{bin:obc2why3} edge/edge_rise.obc))
   (run %{bin:why3} prove -P z3 -t 30 edge_edge_rise.why))))


(rule
 (alias runtest)
 (targets history_and2_history.why)
 (deps history/and2_history.obc)
 (action
  (progn
   (with-stdout-to history_and2_history.why
    (run %{bin:obc2why3} history/and2_history.obc))
   (run %{bin:why3} prove -P z3 -t 30 history_and2_history.why))))

(rule
 (alias runtest)
 (targets traffic_traffic3.why)
 (deps traffic/traffic3.obc)
 (action
  (progn
   (with-stdout-to traffic_traffic3.why
    (run %{bin:obc2why3} traffic/traffic3.obc))
   (run %{bin:why3} prove -P z3 -t 30 traffic_traffic3.why))))

(rule
 (alias runtest)
 (target golden_delay_int.gen.why)
 (deps delay/delay_int.obc)
 (action
  (with-stdout-to %{target}
   (run %{bin:obc2why3} delay/delay_int.obc))))

(rule
 (alias runtest)
 (deps golden/delay_int.why golden_delay_int.gen.why)
 (action
  (diff golden/delay_int.why golden_delay_int.gen.why)))

(rule
 (alias runtest)
 (target golden_toggle.gen.why)
 (deps toggle/toggle.obc)
 (action
  (with-stdout-to %{target}
   (run %{bin:obc2why3} toggle/toggle.obc))))

(rule
 (alias runtest)
 (deps golden/toggle.why golden_toggle.gen.why)
 (action
  (diff golden/toggle.why golden_toggle.gen.why)))

(rule
 (alias runtest)
 (target golden_delay_int2.gen.why)
 (deps delay/delay_int2.obc)
 (action
  (with-stdout-to %{target}
   (run %{bin:obc2why3} delay/delay_int2.obc))))

(rule
 (alias runtest)
 (deps golden/delay_int2.why golden_delay_int2.gen.why)
 (action
  (diff golden/delay_int2.why golden_delay_int2.gen.why)))

(rule
 (alias runtest)
 (target golden_toggle_if.gen.why)
 (deps toggle/toggle_if.obc)
 (action
  (with-stdout-to %{target}
   (run %{bin:obc2why3} toggle/toggle_if.obc))))

(rule
 (alias runtest)
 (deps golden/toggle_if.why golden_toggle_if.gen.why)
 (action
  (diff golden/toggle_if.why golden_toggle_if.gen.why)))

(rule
 (alias runtest)
 (targets fold_fold_add.why)
 (deps fold/fold_add.obc)
 (action
  (progn
   (with-stdout-to fold_fold_add.why
    (run %{bin:obc2why3} fold/fold_add.obc))
   (run %{bin:why3} prove -P z3 -t 30 fold_fold_add.why))))

(rule
 (alias runtest)
 (targets fold_fold_max.why)
 (deps fold/fold_max.obc)
 (action
  (progn
   (with-stdout-to fold_fold_max.why
    (run %{bin:obc2why3} fold/fold_max.obc))
   (run %{bin:why3} prove -P z3 -t 30 fold_fold_max.why))))

(rule
 (alias runtest)
 (targets fold_fold_first.why)
 (deps fold/fold_first.obc)
 (action
  (progn
   (with-stdout-to fold_fold_first.why
    (run %{bin:obc2why3} fold/fold_first.obc))
   (run %{bin:why3} prove -P z3 -t 30 fold_fold_first.why))))
