(library
 (name kairos_artifact_render)
 (wrapped false)
 (modules
  ast_dump
  artifact_render_ir
  artifact_render_monitor
  normalized_program_render)
 (libraries
  kairos_ast
  kairos_fo_formula
  kairos_provenance
  kairos_stage_types
  kairos_stage_names
  kairos_logging
  kairos_automata_generation
  kairos_automata_pass
  kairos_ir
  kairos_ir_proof_views
  kairos_ir_passes
  kairos_ir_stage_passes
  kairos_proof_kernel_types
  kairos_logic_pretty
  kairos_generated_names
  kairos_temporal_support
  kairos_product_build
  kairos_external_z3
  proof_obligation_ir_render))

(library
 (name kairos_artifact_pipeline)
 (wrapped false)
 (modules
  instrumentation_info_builder
  pipeline_build
  pipeline_outputs
  instrumentation_artifacts)
 (libraries
  kairos_ast
  kairos_fo_formula
  kairos_provenance
  kairos_stage_types
  kairos_stage_names
  kairos_logging
  kairos_automata_generation
  kairos_automata_pass
  kairos_ir
  kairos_ir_proof_views
  kairos_ir_passes
  kairos_ir_stage_passes
  kairos_proof_kernel_types
  kairos_proof_kernel_build
  kairos_logic_pretty
  kairos_generated_names
  kairos_temporal_support
  kairos_product_build
  kairos_why3
  kairos_external_why3
  kairos_external_graphviz
  kairos_external_timing
  kairos_external_z3
  kairos_kobj
  kairos_diagnostics
  kairos_pipeline_types
  kairos_result_utils
  kairos_artifact_render
  proof_obligation_ir_render
  bos
  fpath))

(library
 (name kairos_artifact_io)
 (wrapped false)
 (modules artifact_io)
 (libraries
  kairos_ast
  kairos_stage_names
  kairos_logging
  kairos_artifact_render
  kairos_external_why3
  bos
  fpath))
