(include_subdirs unqualified)

(library
 (name kairos_middle_end)
 (wrapped false)
 (libraries
  kairos_ast kairos_logic kairos_parse kairos_stages kairos_automata
  kairos_stage_metadata kairos_instrumentation kairos_common_ir
  kairos_utils proof_obligation_ir_render why3 yojson)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_yojson)))
