(library
 (name kairos_pipeline)
 (wrapped false)
 (modules
 pipeline_run pipeline)
 (libraries
  kairos_ast kairos_provenance kairos_logic kairos_parse kairos_stages kairos_stage_names kairos_automata
  kairos_stage_metadata
  kairos_middle_end kairos_instrumentation
  kairos_common_ir kairos_why3
  kairos_kobj kairos_artifacts proof_obligation_ir_render kairos_diagnostics
  kairos_simulation
  kairos_pipeline_api_types
  yojson why3 bos fpath rresult cmdliner str))
