(library
 (name proof_obligation_ir_render)
 (wrapped false)
 (modules ir_render_canonical ir_render_kernel ir_render_product)
 (libraries
  kairos_ast kairos_ir kairos_proof_kernel_types
  kairos_product_build kairos_generated_names kairos_proof_kernel_naming kairos_logic_pretty
  kairos_temporal_support kairos_external_z3))
