(library
 (name kairos_kobj)
 (wrapped false)
 (modules kairos_object kairos_imports)
 (libraries
  kairos_ast kairos_provenance kairos_logic kairos_parse kairos_stage_types kairos_stage_names kairos_automata
  kairos_ir kairos_ir_passes kairos_proof_kernel_types
  kairos_ast_pretty kairos_temporal_support yojson)
 (preprocess
  (pps ppx_deriving_yojson)))
