(library
 (name kairos_artifact_text_render)
 (wrapped false)
 (modules ir_text_proof_view_render ir_text_program_view_render)
 (libraries
  kairos_ast
  kairos_fo_formula
  kairos_provenance
  kairos_logging
  kairos_ir
  kairos_ir_passes
  kairos_ir_stage_passes
  kairos_proof_kernel_types
  kairos_logic_pretty
  kairos_generated_names
  kairos_temporal_support))
