(library
 (name kairos_artifact_text_render)
 (wrapped false)
 (modules
  ir_text_proof_view_render
  ir_text_program_view_render
  proof_status_render
  why_text_render)
 (libraries
  kairos_ast
  kairos_logging
  kairos_ir
  kairos_ir_passes
  kairos_ir_stage_passes
  kairos_proof_kernel_types
  kairos_core_syntax
  kairos_temporal_support
  kairos_why3
  why3))

(library
 (name kairos_artifact_why_task_dump)
 (wrapped false)
 (modules why_task_dump_render)
 (libraries
  kairos_external_why3
  why3))
