(library
 (name kairos_ir_passes)
 (wrapped false)
 (modules fo_time from_model pre post temporal_lower)
 (libraries
  kairos_verification_model
  kairos_automata
  kairos_core_syntax 
  kairos_ir_temporal_support 
  kairos_ir))

(library
 (name kairos_ir_stage_passes)
 (wrapped false)
 (modules orchestration)
 (libraries
  kairos_verification_model
  kairos_automata
  kairos_ir
  kairos_ir_passes))
