(library
 (name kairos_parse)
 (public_name kairos.parse)
 (wrapped false)
 (modules source_file parse_file parse_api lexer parser)
 (private_modules lexer parser)
 (libraries kairos_ast kairos_provenance kairos_stage_types kairos_stage_metadata sedlex)
 (preprocess
  (pps sedlex.ppx)))

(menhir
 (modules parser)
 (flags --table --inspection))
