(library
 (name kairos_ir_passes)
 (wrapped false)
 (modules fo_time from_ast pre post temporal_lower)
 (libraries
  kairos_ast kairos_automata kairos_automata_generation
  kairos_core_syntax kairos_temporal_support kairos_ir kairos_external_z3
  kairos_product_build))

(library
 (name kairos_ir_stage_passes)
 (wrapped false)
 (modules orchestration)
 (libraries
  kairos_ast
  kairos_stage_types
  kairos_automata_generation
  kairos_ir
  kairos_ir_passes))
