(include_subdirs no)

(library
 (name kairos_instrumentation)
 (wrapped false)
 (modules history_lowering proof_obligation_artifacts raw_obligation_generation triple_annotation)
 (libraries
  kairos_ast kairos_logic kairos_parse kairos_stages kairos_stage_metadata
  kairos_common_ir kairos_automata kairos_utils proof_obligation_ir_render why3 yojson)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_yojson)))
