(library
 (name kairos_pipeline_orchestration)
 (wrapped false)
 (modules
  instrumentation_info_builder
  pipeline_build
  pipeline_outputs
  instrumentation_artifacts
  result_utils)
 (libraries
  kairos_ast
  kairos_fo_formula
  kairos_provenance
  kairos_stage_types
  kairos_stage_names
  kairos_logging
  kairos_automata_generation
  kairos_automata_pass
  kairos_ir
  kairos_ir_passes
  kairos_ir_stage_passes
  kairos_proof_kernel_types
  kairos_proof_kernel_build
  kairos_logic_pretty
  kairos_generated_names
  kairos_temporal_support
  kairos_product_build
  kairos_why3
  kairos_external_why3
  kairos_external_graphviz
  kairos_external_timing
  kairos_external_z3
  kairos_kobj
  kairos_pipeline_diagnostics
  kairos_pipeline_types
  kairos_artifact_text_render
  kairos_artifact_graph_render
  bos
  fpath))
