(include_subdirs unqualified)

(library
 (name kairos_pipeline_orchestration)
 (wrapped false)
 (modules
  instrumentation_info_helpers
  instrumentation_info_builder
  pipeline_build
  result_utils)
 (libraries
  kairos_ast
  kairos_parse
  kairos_stage_types
  kairos_pipeline_types
  kairos_automata_generation
  kairos_automata_pass
  kairos_ir
  kairos_ir_passes
  kairos_ir_stage_passes
  kairos_proof_kernel_types
  kairos_proof_kernel_build
  kairos_core_syntax
  kairos_ir_temporal_support
  kairos_product_build
  kairos_artifact_graph_render
  kairos_external_timing
  kairos_external_z3
  kairos_kobj))

(library
 (name kairos_pipeline_outputs)
 (wrapped false)
 (modules
  pipeline_outputs_helpers
  pipeline_outputs
  instrumentation_artifacts)
 (libraries
  kairos_ast
  kairos_stage_types
  kairos_pipeline_types
  kairos_pipeline_diagnostics
  kairos_artifact_text_render
  kairos_artifact_graph_render
  kairos_artifact_why_task_dump
  kairos_why3
  kairos_external_why3
  kairos_external_graphviz
  kairos_external_timing))
