(library
 (name kairos_services)
 (wrapped false)
 (modules compile_run engine_service pipeline_service)
 (libraries
  kairos_pipeline_types
  kairos_pipeline_orchestration
  kairos_pipeline_diagnostics
  kairos_artifact_text_render
  kairos_why3
  kairos_kobj
  kairos_external_why3
  kairos_external_timing))
