(library
 (name kairos_lsp_protocol)
 (public_name kairos.lsp_protocol)
 (wrapped false)
 (modules lsp_protocol)
 (preprocess
  (pps ppx_deriving_yojson)))

(library
 (name kairos_lsp_app)
 (wrapped false)
 (modules lsp_app lsp_services)
 (libraries
  kairos_application kairos_lsp_protocol
  kairos_input_lang yojson str))
